// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerQuestionState > should render PlayerQuestionState with question type multi-choice and four answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullHeight spaceBetweenAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="fullHeight"
          >
            <h1
              class="typography title full"
            >
              Who painted The Starry Night?
            </h1>
            <div
              class="questionAnswerPicker"
            >
              <div
                class="answerPicker"
              >
                <div
                  class="grid"
                >
                  <button
                    class="answerButton"
                    id="0_Vincent van Gogh"
                    style="--index: 0;"
                    type="button"
                  >
                    <div />
                    Vincent van Gogh
                  </button>
                  <button
                    class="answerButton"
                    id="1_Pablo Picasso"
                    style="--index: 1;"
                    type="button"
                  >
                    <div />
                    Pablo Picasso
                  </button>
                  <button
                    class="answerButton"
                    id="2_Leonardo da Vinci"
                    style="--index: 2;"
                    type="button"
                  >
                    <div />
                    Leonardo da Vinci
                  </button>
                  <button
                    class="answerButton"
                    id="3_Claude Monet"
                    style="--index: 3;"
                    type="button"
                  >
                    <div />
                    Claude Monet
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type multi-choice and six answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullHeight spaceBetweenAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="fullHeight"
          >
            <h1
              class="typography title full"
            >
              Who painted The Starry Night?
            </h1>
            <div
              class="questionAnswerPicker"
            >
              <div
                class="answerPicker"
              >
                <div
                  class="grid"
                >
                  <button
                    class="answerButton"
                    id="0_Vincent van Gogh"
                    style="--index: 0;"
                    type="button"
                  >
                    <div />
                    Vincent van Gogh
                  </button>
                  <button
                    class="answerButton"
                    id="1_Pablo Picasso"
                    style="--index: 1;"
                    type="button"
                  >
                    <div />
                    Pablo Picasso
                  </button>
                  <button
                    class="answerButton"
                    id="2_Leonardo da Vinci"
                    style="--index: 2;"
                    type="button"
                  >
                    <div />
                    Leonardo da Vinci
                  </button>
                  <button
                    class="answerButton"
                    id="3_Claude Monet"
                    style="--index: 3;"
                    type="button"
                  >
                    <div />
                    Claude Monet
                  </button>
                  <button
                    class="answerButton"
                    id="4_Michelangelo"
                    style="--index: 4;"
                    type="button"
                  >
                    <div />
                    Michelangelo
                  </button>
                  <button
                    class="answerButton"
                    id="5_Rembrandt"
                    style="--index: 5;"
                    type="button"
                  >
                    <div />
                    Rembrandt
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type multi-choice and two answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullHeight spaceBetweenAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="fullHeight"
          >
            <h1
              class="typography title full"
            >
              Who painted The Starry Night?
            </h1>
            <div
              class="questionAnswerPicker"
            >
              <div
                class="answerPicker"
              >
                <div
                  class="grid"
                >
                  <button
                    class="answerButton"
                    id="0_Vincent van Gogh"
                    style="--index: 0;"
                    type="button"
                  >
                    <div />
                    Vincent van Gogh
                  </button>
                  <button
                    class="answerButton"
                    id="1_Pablo Picasso"
                    style="--index: 1;"
                    type="button"
                  >
                    <div />
                    Pablo Picasso
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type range 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullHeight spaceBetweenAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="fullHeight"
          >
            <h1
              class="typography title full"
            >
              What percentage of the earth's surface is covered by water?
            </h1>
            <div
              class="questionAnswerPicker"
            >
              <div
                class="answerRange"
              >
                <div
                  class="interactive"
                >
                  <form>
                    <input
                      id="slider-range"
                      max="100"
                      min="0"
                      step="1"
                      type="range"
                      value="50"
                    />
                    <div
                      class="inputContainer"
                    >
                      <div
                        class="textFieldInputContainer textFieldInputKindPrimary"
                      >
                        <input
                          class="textfield"
                          data-testid="test-slider-input-textfield"
                          id="slider-input"
                          max="100"
                          min="0"
                          name="slider-input"
                          type="number"
                          value="50"
                        />
                      </div>
                    </div>
                    <div
                      class="buttonInputContainer buttonInputKindCallToAction"
                    >
                      <button
                        data-testid="test-submit-button-button"
                        id="submit-button"
                        name="submit-button"
                        type="submit"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-rocket"
                          data-icon="rocket"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M128 320L24.5 320c-24.9 0-40.2-27.1-27.4-48.5L50 183.3C58.7 168.8 74.3 160 91.2 160l95 0c76.1-128.9 189.6-135.4 265.5-124.3 12.8 1.9 22.8 11.9 24.6 24.6 11.1 75.9 4.6 189.4-124.3 265.5l0 95c0 16.9-8.8 32.5-23.3 41.2l-88.2 52.9c-21.3 12.8-48.5-2.6-48.5-27.4L192 384c0-35.3-28.7-64-64-64l-.1 0zM400 160a48 48 0 1 0 -96 0 48 48 0 1 0 96 0z"
                            fill="currentColor"
                          />
                        </svg>
                        <span>
                          Submit My Answer
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type true false 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullHeight spaceBetweenAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="fullHeight"
          >
            <h1
              class="typography title full"
            >
              Rabbits can't vomit?
            </h1>
            <div
              class="questionAnswerPicker"
            >
              <div
                class="answerPicker"
              >
                <div
                  class="grid"
                >
                  <button
                    class="answerButton"
                    id="0_True"
                    style="--index: 0;"
                    type="button"
                  >
                    <div />
                    True
                  </button>
                  <button
                    class="answerButton"
                    id="1_False"
                    style="--index: 1;"
                    type="button"
                  >
                    <div />
                    False
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayerQuestionState > should render PlayerQuestionState with question type type answer 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullHeight spaceBetweenAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="fullHeight"
          >
            <h1
              class="typography title full"
            >
              Who painted the Mono Lisa?
            </h1>
            <div
              class="questionAnswerPicker"
            >
              <div
                class="answerInput"
              >
                <div
                  class="interactive"
                >
                  <form>
                    <div
                      class="inputContainer"
                    >
                      <div
                        class="textFieldInputContainer textFieldInputKindPrimary error"
                      >
                        <input
                          class="textfield"
                          data-testid="test-answer-input-textfield"
                          id="answer-input"
                          maxlength="20"
                          minlength="1"
                          name="answer-input"
                          placeholder="Answer"
                          type="text"
                          value=""
                        />
                      </div>
                      <div
                        class="errorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-triangle-exclamation"
                          data-icon="triangle-exclamation"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
                            fill="currentColor"
                          />
                        </svg>
                         
                        This field is required
                      </div>
                    </div>
                    <div
                      class="buttonInputContainer buttonInputKindCallToAction"
                    >
                      <button
                        data-testid="test-submit-button-button"
                        disabled=""
                        id="submit-button"
                        name="submit-button"
                        type="submit"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-rocket"
                          data-icon="rocket"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M128 320L24.5 320c-24.9 0-40.2-27.1-27.4-48.5L50 183.3C58.7 168.8 74.3 160 91.2 160l95 0c76.1-128.9 189.6-135.4 265.5-124.3 12.8 1.9 22.8 11.9 24.6 24.6 11.1 75.9 4.6 189.4-124.3 265.5l0 95c0 16.9-8.8 32.5-23.3 41.2l-88.2 52.9c-21.3 12.8-48.5-2.6-48.5-27.4L192 384c0-35.3-28.7-64-64-64l-.1 0zM400 160a48 48 0 1 0 -96 0 48 48 0 1 0 96 0z"
                            fill="currentColor"
                          />
                        </svg>
                        <span>
                          Submit My Answer
                        </span>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="progressbar"
          />
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="nickname"
        >
          <span>
            FrostyBear
          </span>
        </div>
        <div
          class="score"
        >
          <span>
            10458
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
